--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <h1>This is a text</h1>
-  </body>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Text Store</title>
+<link rel="stylesheet" href="/styles.css">
+</head>
+<body>
+<main class="container">
+<h1>Text Store</h1>
+<form id="saveForm">
+<textarea id="content" placeholder="Write something..." rows="5"></textarea>
+<button type="submit">Save</button>
+</form>
+
+
+<section>
+<h2>Saved texts</h2>
+<ul id="list"></ul>
+</section>
+</main>
+<script src="/script.js"></script>
+</body>
 </html>
